einstellung_derive/src/snapshots/einstellung_derive__tests__literal_types.snap
---
source: src/tests.rs
expression: formatted
---
struct LiteralConfig {
    #[config(default = 42)]
    max_connections: u32,
    #[config(default = "info")]
    log_level: String,
    #[config(default = true)]
    enabled: bool,
}
impl einstellung::Config for LiteralConfig {
    fn metadata() -> &'static einstellung::ConfigMetadata {}
    fn load(
        source: &dyn einstellung::ConfigSource,
    ) -> Result<Self, einstellung::ConfigError> {}
}
