einstellung_derive/src/snapshots/einstellung_derive__tests__mix_option_vec_default_required.snap
---
source: src/tests.rs
expression: formatted
---
struct MixedConfig {
    #[config(required)]
    url: String,
    #[config(default = 5)]
    retries: u32,
    cache_servers: Option<Vec<String>>,
}
impl einstellung::Config for MixedConfig {
    fn metadata() -> &'static einstellung::ConfigMetadata {}
    fn load(
        source: &dyn einstellung::ConfigSource,
    ) -> Result<Self, einstellung::ConfigError> {}
}
