einstellung_derive/src/snapshots/einstellung_derive__tests__multiple_structs.snap
---
source: src/tests.rs
expression: formatted
---
struct ConfigA {
    a: String,
}
impl einstellung::Config for ConfigA {
    fn metadata() -> &'static einstellung::ConfigMetadata {}
    fn load(
        source: &dyn einstellung::ConfigSource,
    ) -> Result<Self, einstellung::ConfigError> {}
}

// ---------------------------------
struct ConfigB {
    b: u32,
}
impl einstellung::Config for ConfigB {
    fn metadata() -> &'static einstellung::ConfigMetadata {}
    fn load(
        source: &dyn einstellung::ConfigSource,
    ) -> Result<Self, einstellung::ConfigError> {}
}

// ---------------------------------
struct ConfigC {
    c: Option<Vec<String>>,
}
impl einstellung::Config for ConfigC {
    fn metadata() -> &'static einstellung::ConfigMetadata {}
    fn load(
        source: &dyn einstellung::ConfigSource,
    ) -> Result<Self, einstellung::ConfigError> {}
}
