einstellung_derive/src/snapshots/einstellung_derive__tests__nested_config.snap
---
source: src/tests.rs
expression: formatted
---
struct DatabaseConfig {
    url: String,
}
impl einstellung::Config for DatabaseConfig {
    fn metadata() -> &'static einstellung::ConfigMetadata {}
    fn load(
        source: &dyn einstellung::ConfigSource,
    ) -> Result<Self, einstellung::ConfigError> {}
}

// ---------------------------------
struct AppConfig {
    database: DatabaseConfig,
    #[config(default = 8080)]
    port: u16,
}
impl einstellung::Config for AppConfig {
    fn metadata() -> &'static einstellung::ConfigMetadata {}
    fn load(
        source: &dyn einstellung::ConfigSource,
    ) -> Result<Self, einstellung::ConfigError> {}
}
