einstellung_derive/src/snapshots/einstellung_derive__tests__optional_fields_no_double_option.snap
---
source: src/tests.rs
expression: formatted
---
/// --- input ---
#[derive(Config)]
struct ClientConfig {
    name: String,
    timeout_ms: Option<u32>,
    proxy: Option<String>,
}
/// --- output ---
#[derive(Default, Debug, serde::Deserialize)]
pub struct ClientConfigPartial {
    pub name: Option<String>,
    pub timeout_ms: Option<u32>,
    pub proxy: Option<String>,
}
impl einstellung::PartialConfig for ClientConfigPartial {
    type Output = ClientConfig;
    fn merge(self, next: Self) -> Self {
        Self {
            name: next.name.or(self.name),
            timeout_ms: next.timeout_ms.or(self.timeout_ms),
            proxy: next.proxy.or(self.proxy),
        }
    }
    fn build(self) -> Result<Self::Output, einstellung::ConfigError> {
        let name = self.name.ok_or(einstellung::ConfigError::MissingField("name"))?;
        let timeout_ms = self.timeout_ms;
        let proxy = self.proxy;
        Ok(ClientConfig {
            name,
            timeout_ms,
            proxy,
        })
    }
}
impl einstellung::Config for ClientConfig {
    type Partial = ClientConfigPartial;
}
