einstellung_derive/src/snapshots/einstellung_derive__tests__rename_fields.snap
---
source: src/tests.rs
expression: formatted
---
struct RenameConfig {
    #[config(rename = "server_host")]
    host: String,
    #[config(rename = "server_port")]
    port: u16,
}
impl einstellung::Config for RenameConfig {
    fn metadata() -> &'static einstellung::ConfigMetadata {}
    fn load(
        source: &dyn einstellung::ConfigSource,
    ) -> Result<Self, einstellung::ConfigError> {}
}
