einstellung_derive/src/snapshots/einstellung_derive__tests__required_fields.snap
---
source: src/tests.rs
expression: formatted
---
struct RequiredConfig {
    #[config(required)]
    host: String,
    #[config(required)]
    port: u16,
}
impl einstellung::Config for RequiredConfig {
    fn metadata() -> &'static einstellung::ConfigMetadata {}
    fn load(
        source: &dyn einstellung::ConfigSource,
    ) -> Result<Self, einstellung::ConfigError> {}
}
