einstellung_derive/src/snapshots/einstellung_derive__tests__serde_attribute_forwarding.snap
---
source: src/tests.rs
expression: formatted
---
/// --- input ---
#[derive(Config)]
struct ApiConfig {
    #[serde(rename = "API_KEY")]
    key: String,
    #[serde(alias = "max_retries", default)]
    retries: u8,
    #[serde(skip_serializing_if = "Option::is_none")]
    endpoint: Option<String>,
}
/// --- output ---
#[derive(Default, Debug, serde::Deserialize)]
pub struct ApiConfigPartial {
    #[serde(rename = "API_KEY")]
    pub key: Option<String>,
    #[serde(alias = "max_retries", default)]
    pub retries: Option<u8>,
    #[serde(skip_serializing_if = "Option::is_none")]
    pub endpoint: Option<String>,
}
impl einstellung::PartialConfig for ApiConfigPartial {
    type Output = ApiConfig;
    fn merge(self, next: Self) -> Self {
        Self {
            key: next.key.or(self.key),
            retries: next.retries.or(self.retries),
            endpoint: next.endpoint.or(self.endpoint),
        }
    }
    fn build(self) -> Result<Self::Output, einstellung::ConfigError> {
        let key = self.key.ok_or(einstellung::ConfigError::MissingField("key"))?;
        let retries = self
            .retries
            .ok_or(einstellung::ConfigError::MissingField("retries"))?;
        let endpoint = self.endpoint;
        Ok(ApiConfig {
            key,
            retries,
            endpoint,
        })
    }
}
impl einstellung::Config for ApiConfig {
    type Partial = ApiConfigPartial;
}
